fix divider spacing in sessions details

--- a/app/components/SessionLogRow/SessionLogRow.scss
+++ b/app/components/SessionLogRow/SessionLogRow.scss
@@ -191,7 +191,7 @@
   border: none;
   background: none;
   padding: $spacing-unit 0 0;
-  margin: 0 0 $spacing-unit;
+  margin: $spacing-large 0 $spacing-unit;
   justify-content: flex-end;
   width: 100%;
   border-top: 1px solid $border-light;
